--- a/home/style.css
+++ b/home/style.css
@@ -31,10 +31,10 @@ body {
 
 /* Styling Container */
 #container-box {
-    width: 430px;
+    width: 380px;
     background-color: var(--white);
-    margin: 100px auto;
-    padding: 20px 25px 100px 25px;
+    margin: 0 auto;
+    padding: 60px 30px;
 }
 
 
@@ -44,20 +44,18 @@ body {
 header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 40px
 }
 
-header p {
+.icon a {
     font-size: 20px;
-    font-weight: 500;
-    margin-top: px;
+    color: #000000;
+    margin-top: -100px;
 }
 
-header .icon-head {
-    font-size: 25px;
-    color: var(--dark-orange);
-    cursor: pointer;
+header .logo{
+    margin-top: -60px;
 }
 
 /* Styling Image Section */
@@ -81,23 +79,6 @@ header .icon-head {
     height: 100%;
 }
 
-#image #file {
-    display: none;
-}
-
-#image #uploadBtn {
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    bottom: 0px;
-    padding-bottom: 8px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: var(--white);
-    line-height: 30px;
-    cursor: pointer;
-    display: none;
-}
 
 /* Styling Profile Section */
 #profile {
@@ -118,23 +99,11 @@ header .icon-head {
 
 
 /* Styling Settings Section */
-#settings {
-    margin-top: 60px;
-}
-
-#settings > div > a {
-    font-size: 20px;
-    font-weight: 500;
-    text-decoration: none;
-    text-align: center;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-bottom: 15px;
-}
 
 a{
     text-decoration: none;
     color: #fff;
-    background-color: #ff90aa;
+    
 }
 
 #settings #settings-container {
@@ -154,10 +123,25 @@ a{
     height: 40px;
     border-radius: 50px;
     padding: 5px 20px 5px 25px;
-    background-color: var(--dark-gray);
+    background-color: #ffb9a4;
     color: var(--white);
     font-weight: 600;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
+}
+
+ #color{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    border-radius: 50px;
+    padding: 5px 20px 5px 25px;
+    color: var(--white);
+    font-weight: 600;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
+    background-color: #b93000;
 }
 
 #settings .settings-icon {
