--- a/TDA.css
+++ b/TDA.css
@@ -28,7 +28,7 @@
 }
 
 .icon , .icon_times{
-    color: #fff;
+    color: #b93000;
     float: right;
     margin: -15px 15px;
     font-size: 2rem;
@@ -134,7 +134,7 @@ h4 {
 	font-size: 1.125rem;
 	padding: 1rem 1.5rem;
 	margin: 0 auto;
-	color: var(--dark);
+	color: #b93000;
 	background-color: #FFF;
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
