--- a/TDA.css
+++ b/TDA.css
@@ -94,7 +94,7 @@ section {
 }
 
 h3 {
-	color: var(--dark);
+	color: #b93000;
 	font-size: 1rem;
 	font-weight: 400;
 	margin-bottom: 0.5rem;
@@ -223,7 +223,7 @@ input:checked ~ .bubble::after {
 	font-weight: 700;
 	text-transform: uppercase;
 	background-color: var(--primary);
-	box-shadow: var(--personal-glow);
+	box-shadow: #b93000;
 	border-radius: 0.5rem;
 	cursor: pointer;
 	transition: 0.2s ease-out;
