--- a/SIGN_UP/style.css
+++ b/SIGN_UP/style.css
@@ -1,175 +1,3 @@
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    background-color: #f5f5f5;
-    text-align: center;
-    font-family: 'Flutterwave', sans-serif;
-    
-}
-
-.form h2{
-  font-size: 1.3rem;
-  margin-top: 15px;
-
-}
-
-.form{
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: black;
-    font-size: 50px;
-    font-weight: 700;
-}
-
-#form{
-    margin: 5em auto;
-    background-color: #fffffa;
-    color: black;
-    width: 30%;
-    font-size: 12px;
-    font-weight: 700;
-    padding: 30px 72px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-    border-radius: 5px;
-    flex-wrap: nowrap;
-    box-shadow:  4px 6px 4px 4px rgba(131, 137, 160, 0.05);
-}
-
- for the error message that would be displayed if a user submits without entering email 
-#form.success input {
-    border-bottom: 1px solid #09c372 ;
-}
-
-#form.error input {
-    border-bottom: 1px solid #ff3860 ;
-}
-
-#form .error {
-    color: #ff3860;
-    font-size: 9px;
-    height: 13px;
-}
-
-
-.form a {
-    text-align: left;
-    margin-top: 5px;
-    text-decoration: none;
-    color: black;
-}
-
-.form .logo{
-    justify-content: center;
-    align-items: center;
-    margin: 5px auto;
-
-}
-
-.form a img {
-    width: 180px;
-    text-decoration: none;
-}
-
-.form a:hover{
-    text-align: left;
-    text-decoration: underline;
-    color: #333138;
-}
-#form .pass{
-    margin-bottom: 50px;
-}
-
-#form .email{
-    margin-bottom: 20px;
-}
-
-.register{
-    font-size: 13px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    color: #4ea090;
-}
-
-.pro a{
-    font-size: 14px;
-    color: #0d4d72;
-}
-
-.pro a:hover{
-    color: black;
-    text-decoration: underline;
-
-}
-
-input{
-    border-top:0;
-    border-bottom: 1px solid #333138 ;
-    border-left: 0;
-    border-right: 0;
-    padding: 10px 0; 
-    
-}
-
-input:focus{
-    outline: none;
-    border-top: 0;
-    border-bottom: 1px solid #333138 ;
-    border-left: 0;
-    border-right: 0;
-    padding: 10px 0; 
-}
-#form button{
-    padding: 7px;
-    font-weight: 700;
-    background-color:#b93000 ;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 1px 3px rgba(48, 43, 43, 0.3);
-    margin-bottom: 10px;
-
-}
-
-#btn{
-    background-color: #e2663f;
-    padding: 10px;
-    box-shadow: 1px 3px rgba(48, 43, 43, 0.2);
-}
-#form button:hover, #btn:hover{
-    opacity: 0.7;
-}
-
-@media only screen and (max-width:768px){
-    #form{
-        width: 150%;
-        margin: 5px auto;
-    }
-    body{
-        margin-top: 2em;
-    }
-    
-    .form a{
-        padding-bottom: 20px;
-        margin: 0 auto 50px;
-    }
-
-
-    section{
-        /* height: 50vh; *
-        display: flex;
-        justify-content: center;
-        align-items: center;
-       
-    }
-} */
-
 *{
     margin: 0;
     padding: 0;
@@ -187,7 +15,7 @@ body{
 
 .form h2{
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .form{
@@ -248,14 +76,12 @@ section{
 }
 
 .form a{
-    text-align: left;
-    margin-top: 0;
+    margin-bottom: 30px;
     text-decoration: none;
     color: black;
 }
 
 .form a:hover{
-    text-align: left;
     text-decoration: underline;
     color: #333138;
 }
@@ -267,19 +93,22 @@ section{
     margin-bottom: 20px;
 }
 
-.register{
+.form .register{
     font-size: 13px;
+    border: none;
     margin-top: 20px;
     margin-bottom: 10px;
     color: #4ea090;
 }
 
-.pro a{
+.form .pro a{
     font-size: 14px;
+    border: none;
+    text-decoration: none;
     color: #0d4d72;
 }
 
-.pro a:hover{
+.form .pro a:hover{
     color: black;
     text-decoration: underline;
 
@@ -302,17 +131,17 @@ input:focus{
     border-right: 0;
     padding: 10px 0; 
 }
-.form button{
+/* .form #btn{
     padding: 7px;
     font-weight: 700;
-    background-color:#b93000 ;
+    /* background-color:#b93000 ;
     color: white;
     border: none;
     border-radius: 20px;
     box-shadow: 1px 3px rgba(48, 43, 43, 0.3);
     margin-bottom: 10px;
 
-}
+} */
 
 .form button a{
     color: #fff;
@@ -320,6 +149,9 @@ input:focus{
 
 #btn{
     background-color: #e2663f;
+    color: white;
+    border: none;
+    border-radius: 20px;
     padding: 10px;
     box-shadow: 1px 3px rgba(48, 43, 43, 0.2);
 }
