--- a/sign_in/style.css
+++ b/sign_in/style.css
@@ -76,14 +76,13 @@ section{
 }
 
 .form a{
-    text-align: left;
-    margin-top: 0;
+    text-align: center;
+    margin-bottom: 30px;
     text-decoration: none;
     color: black;
 }
 
 .form a:hover{
-    text-align: left;
     text-decoration: underline;
     color: #333138;
 }
@@ -102,8 +101,9 @@ section{
     color: #4ea090;
 }
 
-.pro a{
+.from .pro a{
     font-size: 14px;
+    text-decoration: none;
     color: #0d4d72;
 }
 
@@ -170,5 +170,16 @@ input:focus{
         justify-content: center;
         align-items: center;
        
+    }
+}
+
+@media only screen and (max-width:375px){
+    .form a{
+        margin-left: -30px;
+
+    }
+
+    .form .pro a{
+      padding-left: 25px;
     }
 }
