--- a/home/style.css
+++ b/home/style.css
@@ -33,7 +33,7 @@ body {
 #container-box {
     width: 380px;
     background-color: var(--white);
-    margin: 0 auto;
+    margin: 25px auto;
     padding: 60px 30px;
 }
 
@@ -49,29 +49,31 @@ header {
 }
 
 .icon a {
-    font-size: 20px;
+    position: absolute;
+    font-size: 1.8rem;
     color: #000000;
-    margin-top: -100px;
+    margin-top: -50px;
 }
 
 header .logo{
-    margin-top: -60px;
+    position: absolute;
+    height: 80px;
+    margin-top: -30px;
 }
 
 /* Styling Image Section */
 #image {
     padding: 30px 0;
-    text-align: center;
 }
 
 #image #profile-pic {
-    width: 200px;
+    width: 100%;
     height: 200px;
     margin: auto;
     position: relative;
-    border-radius: 20%;
+    border-radius: 50px;
     overflow: hidden;
-    border: 1px solid var(--dark-gray);
+    border: 3px solid var(--dark-gray);
 }
 
 #image #photo {
@@ -169,3 +171,4 @@ a{
     }
 
 }
+
